third_party/WebKit/WebKit/win/WebCoreSupport/WebDragClient.cpp
@@ -34,6 +34,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #pragma warning(push, 0) 
 #include <WebCore/ClipboardWin.h>
+#include <WebCore/DragController.h>
 #include <WebCore/DragData.h>
 #include <WebCore/Font.h>
 #include <WebCore/FontDescription.h>
@@ -68,6 +69,22 @@ namespace WebCore {
 #define DRAG_LINK_URL_FONT_SIZE   10
 
 using namespace WebCore;
+
+static DWORD draggingSourceOperationMaskToDragCursors(DragOperation op)
+{
+    DWORD result = DROPEFFECT_NONE;
+    if (op == DragOperationEvery)
+        return DROPEFFECT_COPY | DROPEFFECT_LINK | DROPEFFECT_MOVE; 
+    if (op & DragOperationCopy)
+        result |= DROPEFFECT_COPY; 
+    if (op & DragOperationLink)
+        result |= DROPEFFECT_LINK; 
+    if (op & DragOperationMove)
+        result |= DROPEFFECT_MOVE;
+    if (op & DragOperationGeneric)
+        result |= DROPEFFECT_MOVE;
+    return result;
+}
 
 WebDragClient::WebDragClient(WebView* webView)
     : m_webView(webView) 
@@ -155,8 +172,7 @@ void WebDragClient::startDrag(DragImageRef image, const IntPoint& imageOrigin, c
             }
         }
 
-        //FIXME: Ensure correct drag ops are available <rdar://problem/5015957>
-        DWORD okEffect = DROPEFFECT_COPY | DROPEFFECT_LINK | DROPEFFECT_MOVE;
+        DWORD okEffect = draggingSourceOperationMaskToDragCursors(m_webView->page()->dragController()->sourceDragOperation());
         DWORD effect;
         COMPtr<IWebUIDelegate> ui;
         if (SUCCEEDED(m_webView->uiDelegate(&ui))) {
